objects/ChargentBase__Gateway__c.object
<CustomObject>
    <description>Configuration object. The administrator should create ONE account for the appropriate payment gateway.</description>
    <fields>
        <fullName>ChargentBase__AVS_Forced_Failure__c</fullName>
        <inlineHelpText>Select one or more AVS response codes which should automatically trigger a declined transaction, regardless of the gateway configuration</inlineHelpText>
        <label>AVS Forced Failure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ChargentBase__Require_AVS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Accounting_Seed_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn on for use Integration with Accounting Seed package.</description>
        <inlineHelpText>Accounting Seed customers can integrate Chargent and Accounting Seed by checking this field.</inlineHelpText>
        <label>Accounting Seed Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Allow_Unlinked_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unlinked Refunds (aka Credits) enable Chargent to send money to credit cards and bank accounts.  Setting this field to TRUE allows Chargent users to send money from your bank account to other bank accounts.  Use this setting carefully and with forethought</inlineHelpText>
        <label>Allow Unlinked Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Approve_Soft_Rejects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Soft Rejects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Available_Card_Types__c</fullName>
        <inlineHelpText>Select the values in this field that represent the card types you want to accept in the Payment Request and the Payment Console features. When a card type is not selected on this list, users will get an error when attempting to use it on PC or PR.</inlineHelpText>
        <label>Available Card Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Available_Currencies__c</fullName>
        <label>Available Currencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States dollar</fullName>
                </value>
                <value>
                    <fullName>Albanian lek</fullName>
                </value>
                <value>
                    <fullName>Afghan afghani</fullName>
                </value>
                <value>
                    <fullName>Algerian dinar</fullName>
                </value>
                <value>
                    <fullName>Angolan kwanza</fullName>
                </value>
                <value>
                    <fullName>Argentine peso</fullName>
                </value>
                <value>
                    <fullName>Armenian dram</fullName>
                </value>
                <value>
                    <fullName>Aruban florin</fullName>
                </value>
                <value>
                    <fullName>Australian dollar</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani manat</fullName>
                </value>
                <value>
                    <fullName>Bahamian dollar</fullName>
                </value>
                <value>
                    <fullName>Bahraini dinar</fullName>
                </value>
                <value>
                    <fullName>Bangladeshi taka</fullName>
                </value>
                <value>
                    <fullName>Barbados dollar</fullName>
                </value>
                <value>
                    <fullName>Belarusian ruble</fullName>
                </value>
                <value>
                    <fullName>Belize dollar</fullName>
                </value>
                <value>
                    <fullName>Bermudian dollar</fullName>
                </value>
                <value>
                    <fullName>Bhutanese ngultrum</fullName>
                </value>
                <value>
                    <fullName>Boliviano</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina convertible mark</fullName>
                </value>
                <value>
                    <fullName>Botswana pula</fullName>
                </value>
                <value>
                    <fullName>Brazilian real</fullName>
                </value>
                <value>
                    <fullName>Brunei dollar</fullName>
                </value>
                <value>
                    <fullName>Bulgarian lev</fullName>
                </value>
                <value>
                    <fullName>Burundian franc</fullName>
                </value>
                <value>
                    <fullName>Cambodian riel</fullName>
                </value>
                <value>
                    <fullName>Canadian dollar</fullName>
                </value>
                <value>
                    <fullName>Cape Verde escudo</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands dollar</fullName>
                </value>
                <value>
                    <fullName>CFA franc BCEAO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Available_PR_Transaction_Types__c</fullName>
        <description>Charge Full Amount/none will send the total value as an auth and capture
Authorize Full Amount will send the total value as a preauth. aka auth only
Authorize Minimum Amount will send a $0.00, $0.01 or $1 whichever is allowed by the card network/gateway</description>
        <inlineHelpText>Charge Full Amount/none will send the total value as an auth and capture
Authorize Full Amount will send the total value as a preauth. aka auth only
Authorize Minimum Amount will send a $0.00, $0.01 or $1 whichever is allowed by the card network/gateway</inlineHelpText>
        <label>Available PR Transaction Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Charge Full Amount</fullName>
                </value>
                <value>
                    <fullName>Authorize Full Amount</fullName>
                </value>
                <value>
                    <fullName>Authorize Minimum Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Available_Payment_Methods__c</fullName>
        <inlineHelpText>In Payment Console this field controls which Payment Methods are available to users.</inlineHelpText>
        <label>Available Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>eCheck</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Cash Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Charge_Amount_Behavior__c</fullName>
        <inlineHelpText>In Payment Console you can control how the Charge Amount field is populated.</inlineHelpText>
        <label>Charge Amount Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Opportunity/Order/Case Charge Amount</fullName>
                </value>
                <value>
                    <fullName>Use Gateway Charge    Amount (Fixed)</fullName>
                </value>
                <value>
                    <fullName>Allow User to Edit in Console</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Credit_Card_Data_Handling__c</fullName>
        <inlineHelpText>This field tells when to clear the credit card information on your records.</inlineHelpText>
        <label>Credit Card / Bank Account Data Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Clear</fullName>
                    <default>true</default>
                    <label>Never Clear</label>
                </value>
                <value>
                    <fullName>Clear After Successful Charge</fullName>
                </value>
                <value>
                    <fullName>Clear After All Transactions</fullName>
                </value>
                <value>
                    <fullName>Clear When Token Present</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Currency__c</fullName>
        <description>This field is deprecated.</description>
        <label>Currency (OLD - do not use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Belgian Franc</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Deutsche Mark</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>French Franc</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Luxembourg Franc</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>Pound Sterling</fullName>
                </value>
                <value>
                    <fullName>Russian Ruble</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>US Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will return the entire string sent from the gateway for debugging purposes.</inlineHelpText>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Default_Payment_Method_for_PC__c</fullName>
        <label>Default Payment Method for PC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>eCheck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Default_Payment_Method_for_PR__c</fullName>
        <label>Default Payment Method for PR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>eCheck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Duplicate_Transaction_Window__c</fullName>
        <description>Duplicate transaction window for Authorize.net gateway - specifies the duplicate transaction validation time frame, in seconds.</description>
        <inlineHelpText>Value in seconds. Maximum is 28800. Use 0 to disable duplicate transaction validation.</inlineHelpText>
        <label>Duplicate Transaction Window</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Enable_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you want to enable Refunds for Ezidebit gateway. The feature should be enabled on Merchant side first.</inlineHelpText>
        <label>Enable Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Endpoint_Override__c</fullName>
        <inlineHelpText>The endpoint override allows you to point the Chargent gateway record to a new endpoint for your gateway.  This is very useful if the gateway has an outage and has a secondary endpoint to send transactions to.</inlineHelpText>
        <label>Endpoint Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Ezidebit_Pass_Fees_to_Payer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ezidebit Pass Fees to Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Gateway_Version__c</fullName>
        <label>Gateway Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vantiv v8</fullName>
                </value>
                <value>
                    <fullName>Vantiv v12</fullName>
                    <default>true</default>
                    <label>Vantiv v12</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Ignore_AVS_check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set to TRUE, Cybersource will not decline transactions which failed AVS check. This enables you to accept &quot;soft declines&quot; from Cybersource. This also means you might be storing bad card data at the gateway.</inlineHelpText>
        <label>Ignore AVS Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Inherit_Chargent_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherit Chargent Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Micro_Deposits_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that micro deposits have been turned off in your merchant account. This does not disable the feature in your merchant account but optimizes the Chargent code when it has already been turned off in the merchant account.</inlineHelpText>
        <label>Micro Deposits Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__ModusLink_Test_Mode__c</fullName>
        <description>Select the test mode for gateway (ModusLink, PlanetPayment, VeriPay).</description>
        <inlineHelpText>Select the test mode for gateway (ModusLink, PlanetPayment, VeriPay).</inlineHelpText>
        <label>Open Payment Platform Test Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Omit_CC_expiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omit CC expiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Orbital_Platform__c</fullName>
        <inlineHelpText>On the Chase Paymentech (Orbital) gateway, this field allows you to set which of their systems you connect to.  The Tampa Platform is sometimes called the PNS Platform.</inlineHelpText>
        <label>Orbital Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salem Platform (BIN 000001)</fullName>
                </value>
                <value>
                    <fullName>Tampa Platform (BIN 000002)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__PayFlow_Use_Recurring_Profiles__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is only applicable to the PayFlow Pro gateway.  When checked Chargent will create Recurring Profiles to be used in payment transactions. When unchecked Chargent will use the PayFlow Reference Transaction features for tokenization.</inlineHelpText>
        <label>PayFlow Use Recurring Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Require_AVS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this is set to TRUE Chargent requires that the Address on the record matches the billing address of the credit card.  If they do not match or the address is blank the transaction will be declined by Chargent before being sent to the gateway.</inlineHelpText>
        <label>Require AVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Require_CCV__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, Chargent requires that the Card Security Code is entered in a popup window before the first transaction is sent to the gateway.</inlineHelpText>
        <label>Require Card Security Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Require_CVV__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this field is set to TRUE card security code is required.</inlineHelpText>
        <label>Require CVV in Payment Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__SCA_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if SCA is enabled for the gateway</description>
        <label>SCA enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Authorize_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In Payment Console setting this field to TRUE shows the Authorize button to your users.</inlineHelpText>
        <label>Show Authorize Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Charge_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In Payment Console setting this field to TRUE shows the Charge button to your users.</inlineHelpText>
        <label>Show Charge Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Create_Update_Token_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In Payment Console setting this field to TRUE shows the Create Token or Update Token (whichever is relevant in the situation) button to your users.</inlineHelpText>
        <label>Show Create/Update Token Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Show_Setup_Recurring_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Setup Recurring Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Static_Charge_Amount__c</fullName>
        <inlineHelpText>In Payment Console this field defines the static amount used, if the Charge Amount Behavior is set to Use Chargent Gateway Amount (Fixed).</inlineHelpText>
        <label>Static Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Test_Mode__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checking this box will send transactions from this Gateway record through the gateway&apos;s test endpoint, rather than the production endpoint.</inlineHelpText>
        <label>Test Endpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Use_Reference_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is deprecated.</inlineHelpText>
        <label>Use PF Pro Reference Trx (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Use_Tokenization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tokenization is a feature that helps lower your PCI scope.  Tokenization works on a number of our gateways, check AppFrontier.com for a complete list.</inlineHelpText>
        <label>Use Tokenization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Verification_Forced_Failures__c</fullName>
        <inlineHelpText>Select one or more security code verification responses which should automatically result in a declined transaction, regardless of the gateway configuration</inlineHelpText>
        <label>Verification Forced Failures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ChargentBase__Require_CCV__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Web_Payment_Status_Endpoint__c</fullName>
        <label>Web Payment Status Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Gateway</label>
    <nameField>
        <label>Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>